--- a/CarRentalSystem/Views/Cars/Edit.cshtml
+++ b/CarRentalSystem/Views/Cars/Edit.cshtml
@@ -19,14 +19,14 @@
         @**@
 
 
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Mark, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.IdMark, ViewBag.Marks as SelectList, htmlAttributes: new { @class = "form-control " })
             </div>
         </div>
 
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Transmission, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.IdTransmission, ViewBag.Transmissions as SelectList, htmlAttributes: new { @class = "form-control " })
@@ -35,19 +35,19 @@
             </div>
         </div>
 
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Fuel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.IdFuel, ViewBag.Fuels as SelectList, htmlAttributes: new { @class = "form-control " })
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.IdBody, ViewBag.Bodies as SelectList, htmlAttributes: new { @class = "form-control " })
-             </div>
+            </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Mileage, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Mileage, new { htmlAttributes = new { @class = "form-control" } })
@@ -56,7 +56,7 @@
         </div>
   
 
-        <div >
+        <div class="form-group">
             @Html.LabelFor(model => model.Model, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Model, new { htmlAttributes = new { @class = "form-control" } })
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <div >
+        <div class="form-group">
             @Html.LabelFor(model => model.Volume, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Volume, new { htmlAttributes = new { @class = "form-control" } })
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <div >
+        <div class="form-group">
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
@@ -81,7 +81,7 @@
         </div>
         
 
-        <div >
+        <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
@@ -93,7 +93,7 @@
         
 
 
-        <div >
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -102,7 +102,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
 </div>
 
 @section Scripts {
