--- a/CarRentalSystem/Views/Shared/_Layout.cshtml
+++ b/CarRentalSystem/Views/Shared/_Layout.cshtml
@@ -7,7 +7,10 @@
     <link rel='stylesheet prefetch' href="~/Content/bootstrap.css">
 
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -16,24 +19,6 @@
 </head>
 
 <body>
-    @*
-          <div class="navbar-fixed">
-            <nav>
-                <div class="nav-wrapper grey">
-
-
-
-                    <ul class="right hide-on-med-and-down">
-                        
-                        
-                        
-
-                    </ul>
-
-                </div>
-            </nav>
-        </div>
-    *@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
            
