--- a/CarRentalSystem/Views/Cars/Index.cshtml
+++ b/CarRentalSystem/Views/Cars/Index.cshtml
@@ -20,7 +20,7 @@
 
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Body)
+            @Html.DisplayNameFor(model => model.Status)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Transmission)
@@ -56,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.Mark.MarkType)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Body.Name)
+                @Html.DisplayFor(modelItem => item.Status.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Transmission.Name)
