--- a/CarRentalSystem/Views/Account/Profile.cshtml
+++ b/CarRentalSystem/Views/Account/Profile.cshtml
@@ -17,14 +17,35 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
             @Html.HiddenFor(model => model.RoleId)
-            @if (Model.Orders.Count !=null)
+            @if (Model.Orders.Count != null)
             {
                 <table class="table">
+                    <th>
+                        <p>
+                            Mark
+                        </p>
+                    </th>
+                    <th>
+                        <p>Date</p>
+                    </th>
+                    <th>
+                        <p>Model</p>
+                    </th>
+                    <th>
+                        <p>Satus</p>
+                    </th>
+                    <th>
+                        <p>Some actions</p>
+                    </th>
                     @foreach (var item in Model.Orders)
                     {
+                       
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem=>item.Car.Mark.MarkType)
+                                @Html.DisplayFor(modelItem => item.Car.Mark.MarkType)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Date)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Car.Model)
@@ -32,9 +53,9 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Status.Name)
                             </td>
-                            
+
                             <td>
-                                @Html.ActionLink("Return", "CancelOrder","Cars", new { id = item.Id }, new { @class = "btn btn-default " })
+                                @Html.ActionLink("Return", "CancelOrder", "Cars", new { id = item.Id }, new { @class = "btn btn-default " })
                             </td>
                         </tr>
                     }
